# loveBEATs

./: .gitignore  README.md  pulseagent.db  requirements.txt
.deriveddata/: info.plist
.deriveddata/ModuleCache.noindex/: Accessibility-1NM41NVN1IJHWFPHL4PWVCBN.pcm  Accessibility-DE5YJJWL3QAGC8RLH5LSV1ASP.pcm  CFNetwork-17PSJZ5SQNGSZF9S0NMXOI45Q.pcm  CFNetwork-UU5VOKA99VT8IF210VGC5IHJ.pcm  CoreData-ABN8LAXX90KF6UD4H00T9TM1I.pcm  CoreData-CLTUHKOEBVQ46ZO3JIDCO9AHZ.pcm  CoreFoundation-9ZXSLXGG9Z1MO0F9E3ZFGMJV2.pcm  CoreFoundation-CGRAFKJ44PI0I7IZ267A00C40.pcm  (+86 more)
api/: index.py
backend/: .env  .env.example  Makefile  README.md  pyproject.toml
backend/app/: config.py  db.py  logging_setup.py  main.py  models.py  prompts.py
backend/app/agent/: __init__.py  chat.py  config.py  llm.py  runtime.py
backend/app/memory/: __init__.py  agent_profiles.py  heart_rate_store.py  persona_templates.py  role_prompt_store.py  role_store.py  session_store.py
backend/app/services/: agent_scaffold.py  chat_runtime.py  heart_rate.py  llm.py  persona.py  session.py  tool_registry.py  turn_runtime.py
backend/app/state/: __init__.py  runtime_state.py
backend/app/static/: chat.html
backend/app/system/: __init__.py  guardrails.py  persona.py  scaffold.py
backend/app/tools/: __init__.py  config.py  heart_rate.py  providers.py  registry.py
backend/scripts/: heart_rate_simulator.py  persona_agent_smoke.py  run_backend.sh  smoke_test.py  stop_backend.sh
backend/tests/: test_api.py
docs/: backend-architecture.md  project-plan.md  shortcuts-heart-rate-bridge.md
(+347 files in other folders)
