[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseagent-backend"
version = "0.1.0"
description = "MVP backend for a relationship-first AI chat app with optional heart-rate context"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "openai>=1.54,<2.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
